implemented simple version of the cloud sync

--- a/.hgignore
+++ b/.hgignore
@@ -19,3 +19,10 @@ sumwars.exe
 # SUMWARS_PORTABLE_MODE inside source dir
 .sumwars/
 
+CMakeLists.txt.orig
+CMakeLists.txt.user
+Dependencies/*
+dxwebsetup.exe
+inst/*
+qtcreator-build/*
+oalinst.exe
