- fixed some startup problems - updated installer file

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -22,6 +22,7 @@
 #endif
 
 #cmakedefine SUMWARS_PORTABLE_MODE
+#cmakedefine SUMWARS_STANDALONE_MODE
 #cmakedefine SUMWARS_RANDOM_REGIONS
 
 #endif // __SUMWARS_CONFIG_H__
