added a game info tab to the content editor retrieves infos about player positon and most recent clicked gameobject

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -409,6 +409,7 @@ IF(SUMWARS_BUILD_TOOLS)
     ./src/gui/contenteditor/renderinfoeditor.cpp
     ./src/gui/contenteditor/itemeditor.cpp
     ./src/gui/contenteditor/monstereditor.cpp
+    ./src/gui/contenteditor/gameinfotab.cpp
     )
 ENDIF()
 
