- streamlined boost dependendy handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,7 +171,6 @@ include_directories(
 )
 
 IF (WIN32)
- FIND_PACKAGE(BoostOGRE REQUIRED)
  FIND_PACKAGE(GNUWIN REQUIRED)
 ENDIF (WIN32)
 FIND_PACKAGE(OIS REQUIRED)
@@ -183,6 +182,14 @@ FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(PhysFS REQUIRED)
+
+if(WIN32)
+  set(Boost_USE_STATIC_LIBS ON)
+endif(WIN32)
+#set(Boost_DEBUG 1) #uncomment this if you have problems finding boost!
+
+find_package(Boost COMPONENTS system date_time chrono thread REQUIRED)
+
 IF(SUMWARS_BUILD_TOOLS)
   FIND_PACKAGE(POCO REQUIRED)
 ENDIF()
@@ -221,6 +228,8 @@ INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PHYSFS_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+
 IF(SUMWARS_NO_TINYXML)
   INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
 ELSE()
@@ -245,8 +254,8 @@ IF(WIN32)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/dirent)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/boost)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/gettext/include/)
-  ADD_DEFINITIONS( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4800 /wd4244 /wd4305 /nologo" )
-  MESSAGE("WARNING: Compiler warnings 4800, 4244 and 4305 disabled!")
+  ADD_DEFINITIONS( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4800 /wd4244 /wd4305 /wd4251 /nologo" )
+  MESSAGE("WARNING: Compiler warnings 4800, 4244, 4251 and 4305 disabled!")
 ELSE()
   INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
 ENDIF()
@@ -441,6 +450,7 @@ SET(LINK_LIBS
   ${OGG_LIBRARY}
   ${VORBIS_LIBRARIES} 
   ${PHYSFS_LIBRARY}
+  ${Boost_LIBRARIES}
   )
 IF(SUMWARS_NO_TINYXML)
   SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARIES})
