Added pthread explicitly to cmake, fixes Linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(PhysFS REQUIRED)
+FIND_PACKAGE(Threads REQUIRED)
 
 if(WIN32)
   set(Boost_USE_STATIC_LIBS ON)
@@ -451,6 +452,7 @@ SET(LINK_LIBS
   ${VORBIS_LIBRARIES} 
   ${PHYSFS_LIBRARY}
   ${Boost_LIBRARIES}
+  ${CMAKE_THREAD_LIBS_INIT}
   )
 IF(SUMWARS_NO_TINYXML)
   SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARIES})
