Added playlist specific shuffle/repeat overrides. Moved menu playlist definition into XML file (no longer hard-coded).

--- a/src/gui/default_resources.cfg.inc.in
+++ b/src/gui/default_resources.cfg.inc.in
@@ -60,6 +60,9 @@ const std::string defaultResourcesCfg =
 "[world]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world\n"
 "\n"
+"[main_menu]\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/main_menu\n"
+"\n"
 "[npc]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/npc\n"
 "\n"
