added support for Lua 5.2 fixes #23

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ IF (WIN32)
  FIND_PACKAGE(GNUWIN REQUIRED)
 ENDIF (WIN32)
 FIND_PACKAGE(OIS REQUIRED)
-FIND_PACKAGE(Lua51 REQUIRED)
+FIND_PACKAGE(Lua REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
 FIND_PACKAGE(OpenAL REQUIRED)
