--- a/src/gui/default_resources.cfg.inc.in
+++ b/src/gui/default_resources.cfg.inc.in
@@ -59,6 +59,12 @@ const std::string defaultResourcesCfg =
 "\n"
 "[world]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/aisen\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/cursedCaves\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/dwarfenwall\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/greyOldMine\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/medair\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/world/necrotia\n"
 "\n"
 "[npc]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/data/npc\n"
