resources.cfg is generated based on the CEGUI version now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,13 @@ ENDIF (WIN32)
 FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(Lua REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
+
+IF(CEGUI_VERSION VERSION_LESS "0.8.0")
+	SET(CEGUI_VERSION_RESOURCES "gui")
+ELSE()
+	SET(CEGUI_VERSION_RESOURCES "gui_0.8")
+ENDIF()
+
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
 FIND_PACKAGE(OpenAL REQUIRED)
 FIND_PACKAGE(ALUT REQUIRED)
