--- a/src/gui/default_resources.cfg.inc.in
+++ b/src/gui/default_resources.cfg.inc.in
@@ -67,20 +67,21 @@ const std::string defaultResourcesCfg =
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/particle/ogre_1_6\n"
 "\n"
 "[GUI]\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/configs\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/fonts\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/fonts/${ASPECT_RATIO}\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/imagesets\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/layouts\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/layouts/common\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/layouts/${ASPECT_RATIO}\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui_common/imagesets\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/configs\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/fonts\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/fonts/${ASPECT_RATIO}\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/imagesets\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/layouts\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/layouts/common\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/layouts/${ASPECT_RATIO}\n"
 
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/looknfeel\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/schemes\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/animations\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/looknfeel\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/schemes\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/animations\n"
 "\n"
 "[GUI_XML_schemas]\n"
-"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/gui/xml_schemas\n"
+"FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/@CEGUI_VERSION_RESOURCES@/xml_schemas\n"
 "\n"
 "[emotionsets]\n"
 "FileSystem=@SUMWARS_PREFIX@/@SUMWARS_SHARE_DIR@/resources/emotionsets\n"
