refs #34: Replaced Ogre Particle System with Particle Universe and improved particle handling in general

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(PhysFS REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
+FIND_PACKAGE(ParticleUniverse REQUIRED)
 
 if(WIN32)
   set(Boost_USE_STATIC_LIBS ON)
@@ -225,6 +226,7 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gussound)
 ADD_DEFINITIONS(-DGUSSOUND_STANDALONE)
 INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OGRE_RTShaderSystem_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${OGRE_Overlay_INCLUDE_DIR})
 IF (WIN32)
   Message(STATUS "Adding boost include: ${BoostOGRE_INCLUDE_DIR}")
   INCLUDE_DIRECTORIES(${BoostOGRE_INCLUDE_DIR})
@@ -241,6 +243,7 @@ INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PHYSFS_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${PARTICLE_UNIVERSE_INCLUDE_DIRS})
 
 IF(SUMWARS_NO_TINYXML)
   INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
@@ -511,6 +514,7 @@ SET(LINK_LIBS
   ${OGRE_LIBRARIES}
   ${OGRE_Terrain_LIBRARY}
   ${OGRE_RTShaderSystem_LIBRARY}
+  ${OGRE_Overlay_LIBRARY}
   ${OIS_LIBRARIES} 
   ${CEGUI_LIBRARY} 
   ${CEGUIOGRE_LIBRARY}
@@ -523,6 +527,7 @@ SET(LINK_LIBS
   ${Boost_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
   ${CPPNETLIB_LIBS}
+  ${PARTICLE_UNIVERSE_LIBRARIES}
   )
   
 IF(SUMWARS_BUILD_WITH_ONLINE_SERVICE)
