refs #29: Throw cmake error when not at least CEGUI 0.8.0 was found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,11 +181,10 @@ ENDIF (WIN32)
 FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(Lua REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
+SET(CEGUI_VERSION_RESOURCES "gui_0.8")
 
 IF(CEGUI_VERSION VERSION_LESS "0.8.0")
-	SET(CEGUI_VERSION_RESOURCES "gui")
-ELSE()
-	SET(CEGUI_VERSION_RESOURCES "gui_0.8")
+	MESSAGE(FATAL_ERROR "This version of Sumwars requires at least CEGUI 0.8.0")
 ENDIF()
 
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
